--- a/lib/components/JSONViewer/JSONViewer.vars.css
+++ b/lib/components/JSONViewer/JSONViewer.vars.css
@@ -12,6 +12,7 @@
   --text-bracket: #344054;
   --text-key: #5048e5;
   --text-line-number: #98a2b3;
+  --bg-container: #fff;
   --bg-row-hover: #f5f5f5;
   --bg-left-panel: #fcfcfd;
   --border-left-panel: #eaecf0;
@@ -27,6 +28,7 @@
   --text-bracket: #344054;
   --text-key: #5048e5;
   --text-line-number: #98a2b3;
+  --bg-container: #444;
   --bg-row-hover: #f5f5f5;
   --bg-left-panel: #fcfcfd;
   --border-left-panel: #eaecf0;
