--- a/lib/components/JSONViewer/styles/Row.module.css
+++ b/lib/components/JSONViewer/styles/Row.module.css
@@ -1,23 +1,24 @@
 @import './JSONViewer.vars.css';
 
-.wrapper {
+.container {
+  display: flex;
   width: 100%;
-  border-radius: 5px;
+  border-radius: 4px;
+  padding: 2px 24px;
+  box-sizing: border-box;
 }
-.wrapper:hover {
+.container:hover {
   background-color: var(--bg-row-hover);
 }
 
-.container {
-  display: table;
+.leftPanelContainer {
+  display: table-cell;
+  min-width: 24px;
 }
 
-.leftPanelContainer {
-  background-color: var(--bg-left-panel);
-  border-right: 1px solid var(--border-left-panel);
-  display: table-cell;
-  padding-left: 24px;
-  min-width: 46px;
+.collapseIcon {
+  stroke: var(--icon-collapse);
+  cursor: pointer;
 }
 
 .indent {
@@ -57,8 +58,9 @@
 }
 
 .iconContainer {
-  margin-left: 8px;
+  margin-left: 12px;
   cursor: pointer;
+  vertical-align: sub;
 }
 
 .hidden {
@@ -68,6 +70,7 @@
 .text {
   font-family: var(--text-font-family);
   display: table-cell;
+  line-height: 16px;
 }
 
 .string {
